Admin modulo de economia y civica  practicas

--- a/Admision-sim/src/app/components/admin/cursos/economia/index-economia/index-economia.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/economia/index-economia/index-economia.component.html
@@ -5,7 +5,7 @@
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
         <h5 class="card-header d-flex justify-content-between">
-            Economia
+            Economía
             <a class="btn btn-success" [routerLink]="['/admin/economia/registrar']">
                 <i class="bi bi-plus-circle-fill"></i> &nbsp; Registrar
             </a>
