--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -80,6 +80,28 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <!-- Economía -->
+                        <div class="card border-0 my-2" style="background-color: rgb(255, 245, 219);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(239, 180, 32);">Prácticas de Economía</p>
+                            <div class="card-body">
+                                <div class="row">
+                                        <canvas id="MyChartEco"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Educación Cívica -->
+                        <div class="card border-0 my-2" style="background-color: rgb(247, 219, 255);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(203, 33, 251);">
+                                Prácticas de Educación Cívica
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                        <canvas id="MyChartEdCivica"></canvas>
+                                </div>
+                            </div>
+                        </div>
 
                          <!-- Trigonometría -->
                          <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
