--- a/Admision-sim/src/app/components/admin/cursos/economia/edit-economia/edit-economia.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/economia/edit-economia/edit-economia.component.html
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="card-footer text-center">
-            <a title="Volver a Álgebra" class="text-success fs-2" [routerLink]="['/admin/aritmetica']"><i
+            <a title="Volver a Álgebra" class="text-success fs-2" [routerLink]="['/admin/economia']"><i
                     class="bi bi-arrow-left-square-fill"></i></a>
         </div>
     </div>
