Curso Física, admin - prácticac - historial de practicas

--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -103,6 +103,18 @@
                             </div>
                         </div>
 
+                        <!-- Física -->
+                        <div class="card border-0 my-2" style="background-color: rgb(255, 232, 219);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(255, 109, 24);">
+                                Prácticas de Física
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                        <canvas id="MyChartFisica"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
                          <!-- Trigonometría -->
                          <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
                             <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de Trigonometría</p>
