Curso geografía Admin-Prácticas e historial de practicas

--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -42,51 +42,56 @@
                         </ng-container>
 
                         <!-- Álgebra -->
-                        <div  class="card border-0 my-2" style="background-color: rgb(212, 255, 237);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(0, 205, 123);">Prácticas de Álgebra</p>
+                        <div class="card border-0 my-2" style="background-color: rgb(212, 255, 237);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(0, 205, 123);">Prácticas de
+                                Álgebra</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChart"></canvas>
+                                    <canvas id="MyChart"></canvas>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Anatomía -->
                         <div class="card border-0 my-2" style="background-color: rgb(255, 219, 219);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(255, 67, 73);">Prácticas de Anatomía</p>
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(255, 67, 73);">Prácticas de
+                                Anatomía</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartAn"></canvas>
+                                    <canvas id="MyChartAn"></canvas>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Aritmética -->
                         <div class="card border-0 my-2" style="background-color: rgb(219, 253, 255);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(20, 211, 221);">Prácticas de Aritmética</p>
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(20, 211, 221);">Prácticas de
+                                Aritmética</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartArit"></canvas>
+                                    <canvas id="MyChartArit"></canvas>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Biología -->
                         <div class="card border-0 my-2" style="background-color: rgb(220, 255, 219);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(13, 186, 7);">Prácticas de Biología</p>
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(13, 186, 7);">Prácticas de
+                                Biología</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartBio"></canvas>
+                                    <canvas id="MyChartBio"></canvas>
                                 </div>
                             </div>
                         </div>
-                        
+
                         <!-- Economía -->
                         <div class="card border-0 my-2" style="background-color: rgb(255, 245, 219);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(239, 180, 32);">Prácticas de Economía</p>
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(239, 180, 32);">Prácticas de
+                                Economía</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartEco"></canvas>
+                                    <canvas id="MyChartEco"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +103,7 @@
                             </p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartEdCivica"></canvas>
+                                    <canvas id="MyChartEdCivica"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -110,17 +115,30 @@
                             </p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartFisica"></canvas>
+                                    <canvas id="MyChartFisica"></canvas>
                                 </div>
                             </div>
                         </div>
 
-                         <!-- Trigonometría -->
-                         <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
-                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de Trigonometría</p>
+                        <!-- Geografía -->
+                        <div class="card border-0 my-2" style="background-color: rgb(205, 205, 205);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(63, 63, 63);">
+                                Prácticas de Geografía
+                            </p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChartTrigo"></canvas>
+                                    <canvas id="MyChartGeografia"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Trigonometría -->
+                        <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de
+                                Trigonometría</p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartTrigo"></canvas>
                                 </div>
                             </div>
                         </div>
