--- a/Admision-sim/src/app/components/admin/cursos/fisica/edit-fisica/edit-fisica.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/fisica/edit-fisica/edit-fisica.component.html
@@ -5,7 +5,7 @@
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
         <h3 class="card-header fw-bold text-center text-muted">
-            Actualizar pregunta de Educación Cívica
+            Actualizar pregunta de Física
         </h3>
         <div class="card-body">
             <div class="d-flex justify-content-center m-3">
