--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -132,6 +132,17 @@
                             </div>
                         </div>
 
+                        <!-- Razonamiento Verbal -->
+                        <div class="card border-0 my-2" style="background-color: rgb(233, 255, 249);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(27, 196, 128);">Prácticas de
+                                Razonamiento Verbal</p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartRazVerbal"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Trigonometría -->
                         <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
                             <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de
