Geometría Admin, prácticas e historial

--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -132,6 +132,18 @@
                             </div>
                         </div>
 
+                        <!-- Geometría -->
+                        <div class="card border-0 my-2" style="background-color: rgb(219, 228, 255);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(38, 92, 255);">
+                                Prácticas de Geometría
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartGeometria"></canvas>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Trigonometría -->
                         <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
                             <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de
