Prácticas e historial completo de los cursos

--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -144,6 +144,82 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Historia del Perú -->
+                        <div class="card border-0 my-2" style="background-color: rgb(224, 207, 196);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(175, 80, 16);">
+                                Prácticas de Historia del Perú
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartHPeru"></canvas>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Historia universal -->
+                        <div class="card border-0 my-2" style="background-color: rgb(84, 84, 84);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(255, 255, 255);">
+                                Prácticas de Historia Universal
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartHUniversal"></canvas>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Lenguaje -->
+                        <div class="card border-0 my-2" style="background-color: rgb(219, 255, 245);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(4, 214, 154);">
+                                Prácticas de Leguaje
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartLenguaje"></canvas>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Literatura -->
+                        <div class="card border-0 my-2" style="background-color: rgb(253, 219, 255);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(226, 48, 190);">
+                                Prácticas de Literatura
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartLenguaje"></canvas>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Química -->
+                        <div class="card border-0 my-2" style="background-color: rgb(236, 236, 236);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(0, 217, 90);">
+                                Prácticas de Química
+                            </p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartQuimica"></canvas>
+
+                                </div>
+                            </div>
+                        </div>
+
+                         <!-- Razonamiento Matematico -->
+                         <div class="card border-0 my-2" style="background-color: rgb(255, 242, 245);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(255, 84, 124);">Prácticas de
+                                Razonamiento Matemático</p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <canvas id="MyChartRazMatematico"></canvas>
+                                </div>
+                            </div>
+                        </div>
                         
                         <!-- Razonamiento Verbal -->
                         <div class="card border-0 my-2" style="background-color: rgb(233, 255, 249);">
@@ -162,7 +238,7 @@
                                 Trigonometría</p>
                             <div class="card-body">
                                 <div class="row">
-                                    <canvas id="MyChartTrigo"></canvas>
+                                    <canvas id="MyChartTrigonometria"></canvas>
                                 </div>
                             </div>
                         </div>
